--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        // required to find the project's artifacts
+        maven { url "https://www.jitpack.io" }
     }
 }
 
