--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.2</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java -->
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.1.2</version>
+		</dependency>
 
 	</dependencies>
 
