--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,19 @@
 		<servlet-name>ResetPasswordServlet</servlet-name>
 		<servlet-class>servlet.ResetPasswordServlet</servlet-class>
 	</servlet>
-	
+	<servlet>
+		<servlet-name>EventCreationServlet</servlet-name>
+		<servlet-class>servlet.EventCreationServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>SportServlet</servlet-name>
+		<servlet-class>servlet.SportServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>CitiesServlet</servlet-name>
+		<servlet-class>servlet.CitiesServlet</servlet-class>
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -27,6 +39,18 @@
 	<servlet-mapping>
 		<servlet-name>ResetPasswordServlet</servlet-name>
 		<url-pattern>/resetPassword</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>EventCreationServlet</servlet-name>
+		<url-pattern>/createEvent</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SportServlet</servlet-name>
+		<url-pattern>/getSports</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CitiesServlet</servlet-name>
+		<url-pattern>/getCities</url-pattern>
 	</servlet-mapping>
 </web-app>
 
