--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,12 @@
 		<servlet-name>CitiesServlet</servlet-name>
 		<servlet-class>servlet.CitiesServlet</servlet-class>
 	</servlet>
-
+<servlet>
+		<servlet-name>EventListServlet</servlet-name>
+		<servlet-class>servlet.EventListServlet</servlet-class>
+	</servlet>
+	
+	
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -51,6 +56,10 @@
 	<servlet-mapping>
 		<servlet-name>CitiesServlet</servlet-name>
 		<url-pattern>/getCities</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>EventListServlet</servlet-name>
+		<url-pattern>/getEvents</url-pattern>
 	</servlet-mapping>
 </web-app>
 
