Dodane mogucnosti azuriranja i brisanja dogadaja
Dodane su mogucnosti za brisanje i izmjenu kreiranih dogadaja, pritom je izmjenjena i preimenovana metoda za kreiranje novih dogadaja kako bi se svim promjenama moglo pristupiti putem jedne metode.
Trenutno je potrebno dodati u zahtjev i tip koji se izvrsava (create,update,delete).

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,8 +16,8 @@
 		<servlet-class>servlet.ResetPasswordServlet</servlet-class>
 	</servlet>
 	<servlet>
-		<servlet-name>EventCreationServlet</servlet-name>
-		<servlet-class>servlet.EventCreationServlet</servlet-class>
+		<servlet-name>EventOptionsServlet</servlet-name>
+		<servlet-class>servlet.EventOptionsServlet</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>SportServlet</servlet-name>
@@ -50,8 +50,8 @@
 		<url-pattern>/resetPassword</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-		<servlet-name>EventCreationServlet</servlet-name>
-		<url-pattern>/createEvent</url-pattern>
+		<servlet-name>EventOptionsServlet</servlet-name>
+		<url-pattern>/eventSettings</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>SportServlet</servlet-name>
