Kreirana aktivnost za obnavljanje lozinke
Kreirana je aktivnost za obnavljanje korisničke lozinke te je povezana s aktivnošću za prijavu korisnika. U skladu s tim, dodani su odgovarajući stringovi u resurse 'app' i 'webservice' modula, metode za dohvaćanje i pohranu e-mail adrese u klasu 'User' te metode za slanje poziva prema web servisu i obradu odgovora primljenog od web servisa.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistrationActivity" />
-        <activity android:name=".StartActivity"></activity>
+        <activity android:name=".StartActivity" />
+        <activity android:name=".ForgPassActivity" />
     </application>
 
 </manifest>
