Izmjena naziva klasa i generaliziranje metoda
Promijenjeni nazivi klasa kako bi bili intuitivni i promijenjena metoda za promjenu fokusa kako bi bila primjenjiva na razlicitim slucajevima.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".StartActivity" />
-        <activity android:name=".ForgPassActivity" />
+        <activity android:name=".ForgottenPassActivity" />
     </application>
 
 </manifest>
