--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".StartActivity" />
         <activity android:name=".ForgottenPassActivity" />
+        <activity android:name=".EventListActivity"></activity>
     </application>
 
 </manifest>
