Napravljen dizajn pregleda događaja Izrađen je vizualni dizajn i xml file za pregled događaja. U tome se vide detalji o događaju. U strings.xml dodani stringovi, napravljen dizajn btn_disabled za onesposobljeni gumb i dodana ikona za kvačicu.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".StartActivity" />
         <activity android:name=".ForgottenPassActivity" />
-        <activity android:name=".EventListActivity"></activity>
+        <activity android:name=".EventListActivity" />
+        <activity android:name=".EventDetailsActivity"></activity>
     </application>
 
 </manifest>
